# valexa

./: interface.py  main.py  package-lock.json  package.json  pyproject.toml  vue.config.js
filesReport/: TemplateReport.docx
interface/: dev_profile.html  get_params.html  processProfilesReport.html  profile.html  validate.html
src/: App.vue  background.js  main.js
src/components/: IPCListener.vue
src/components/data/: DataOpen.vue  DataTable.vue  TableConfig.vue
src/components/profile/table/: GraphLinearity.vue  GraphProfile.vue  GraphRegression.vue  GraphResiduals.vue  TableValidationData.vue  TableValidationSummary.vue  TableValidationUncertainty.vue
src/components/settings/: AdvancedSetting.vue  CorrectionSetting.vue  DataSetting.vue  ModelizationSetting.vue  ProfileSetting.vue
src/store/: index.js
src/views/: DataView.vue  SettingsView.vue
valexa/: dataobject.py  helper.py  models.py  profiles.py
valexa/core/: profiles.py
valexa/electron_interface/: generateReport.py
valexa/examples/: test_feinberg_coli.py  test_inra_pyrene.py
valexa/gui/: app.py
